--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,11 +28,12 @@ header .logo img {
 header nav ul {
     list-style: none;
     margin: 0;
-    padding: 0;
-    display: flex;
+    padding: center;
+    margin: 0;
 }
 
 header nav ul li {
+    display: inline;
     margin: 0 10px;
 }
 
@@ -40,6 +41,10 @@ header nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+}
+
+header nav ul li a:hover {
+    text-decoration: underline;
 }
 
 /* Section principale */
